# claune-android

./: .editorconfig  .gitignore  README.md
.github/workflows/: android-quality.yml
Claune design/: Hi-fi Bottom Capsule.html  Wireframes.html  hifi.jsx  notes.md  wireframes.jsx
android/: .gitignore  build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/androidTest/java/com/divyanshgolyan/claune/android/ui/: DemoModeSmokeTest.kt
android/app/src/debug/java/com/divyanshgolyan/claune/android/telemetry/: ClauneTelemetry.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/divyanshgolyan/claune/android/accessibility/: AccessibilityBridge.kt  ClauneAccessibilityService.kt
android/app/src/main/java/com/divyanshgolyan/claune/android/app/: ClauneApplication.kt
android/app/src/main/java/com/divyanshgolyan/claune/android/debug/: DebugSnapshotReceiver.kt
android/app/src/main/java/com/divyanshgolyan/claune/android/ui/: ClauneApp.kt  (+8 more)
android/app/src/main/res/drawable/: ic_launcher_foreground.xml  ic_launcher_monochrome.xml
android/app/src/main/res/values/: colors.xml  strings.xml
android/app/src/main/res/xml/: accessibility_service_config.xml
android/bashkit-bridge/: Cargo.toml
android/bashkit-bridge/src/: lib.rs
android/gradle/: libs.versions.toml
docs/: execute-script-api-audit.md  recommended-stack.md  v1-architecture.md
scripts/: analyze_run.py  context_distribution.py  langsmith-env.sh  pull_projection_fixture.sh  run_projection_benchmark.sh  screen_projection_experiments.py
(+72 files in other folders)
